--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                      <div class="products__buttons">
                         <button class="products__cart">
                            <img src="img/products/cart.svg" alt="">
-                           В корзину
+                           Домой
                         </button>
                         <img src="img/products/featured.svg" alt="" class="products__feature">
                         <img src="img/products/scale.svg" alt="" class="products__scale">
