--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   <img src="img/header/arrow.svg" alt="">
                   <ul class="header__more-list">
                      <li class="header__item-more">
-                        <a href="#" class="header__link">Доставка</a>
+                        <a href="#" class="header__link">Delivery</a>
                      </li>
                      <li class="header__item-more">
                         <a href="#" class="header__link">Оплата</a>
